Setting start script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Study project - React and Redux Pluralsight course by Cory House",
   "author": "Vinicius Sabadim Fernandes",
   "license": "MIT",
+  "scripts": {
+  	"prestart": "babel-node tools/startMessage.js",
+  	"start": "babel-node tools/srcServer.js"
+  },
   "dependencies": {
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
