--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "license": "MIT",
   "scripts": {
   	"prestart": "babel-node tools/startMessage.js",
-  	"start": "babel-node tools/srcServer.js"
+  	"start": "npm-run-all --parallel open:src lint:watch",
+  	"open:src": "babel-node tools/srcServer.js",
+  	"lint": "node_modules/.bin/esw webpack.config.* src tools",
+  	"lint:watch": "npm run lint -- --watch"
   },
   "dependencies": {
     "babel-polyfill": "6.8.0",
